<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblSelecioneForma"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/label_radiobtt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgOperacaoInicial"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rdOpQuadrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_option_quadrado" />

            <RadioButton
                android:id="@+id/rdOpRetangulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_option_retangulo" />

            <RadioButton
                android:id="@+id/rdOpTri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_option_triangulo" />

            <RadioButton
                android:id="@+id/rdOpCir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_option_circulo" />

            <View
                android:id="@+id/espaco1"
                android:layout_width="match_parent"
                android:layout_height="175dp" />

            <Button
                android:id="@+id/btnAvancar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAvancou"
                android:text="@string/btn_avancar"
                android:textAlignment="center"
                android:typeface="normal" />

        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>