<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TelaInformeDadosTrianguloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblInfoDadosTriangulo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/lbl_dados_tri"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_base"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/inpBaseTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblAltura"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="bottom|clip_vertical"
            android:text="@string/lbl_altura"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/inpAlturaTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <View
            android:id="@+id/espacoTelaInfoDadosTriangulo"
            android:layout_width="match_parent"
            android:layout_height="102dp" />

        <Button
            android:id="@+id/btnCalcTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnCalculouTriangulo"
            android:text="@string/btn_calcular_triangulo" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>