<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TelaResultadoQuaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:contentDescription="@string/img_quadrado"
            app:srcCompat="@mipmap/quadrado_foreground" />

        <TextView
            android:id="@+id/lblAreaQuadradoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_resultado_operacao_quadrado"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblResultOperaQuadrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <View
            android:id="@+id/espaco5"
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/btnFazerOutraOpera1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnFazerOutraOpera"
            android:text="@string/btn_fazer_outra_operacao" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>